--- a/Review Carousel/index.html
+++ b/Review Carousel/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Review Carousel</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="review">"Bought this yesterday ,working well for me".</div>
-        <div class="author">RK</div>
-        <button>Next Review</button>
+  <div class="carousel-container">
+        <div class="review">"This product changed my life! Highly recommended."</div>
+        <div class="author">- Jane Doe</div>
+        <button onclick="showNextReview()">Next Review</button>
     </div>
-    
-
-
-    <script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
