--- a/Responsive Navbar/index.html
+++ b/Responsive Navbar/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav-bar">
+    <div class="logo">
+        <img src="" alt="" >
+    </div>
+    <div class="navbar">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Gallery</a>
