--- a/Responsive Navbar/index.html
+++ b/Responsive Navbar/index.html
@@ -15,6 +15,14 @@
         <a href="#">About</a>
         <a href="#">Gallery</a>
         <a href="#">Contact Us</a>
+        <div class="dropdown">
+            <a href="#" class="dropbtn">Login</a>
+            <div class="dropdown-content">
+                <a href="#">Guest</a>
+                <a href="#">Admin</a>
+            </div>
+
+        </div>
 
 
     </div>
