--- a/Responsive Navbar/index.html
+++ b/Responsive Navbar/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive-Navbar</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icon.jpeg" type="image/x-icon">
 </head>
 <body>
     <div class="logo">
-        <img src="" alt="" >
+        <img src="logo.webp" alt="logo" >  
     </div>
     <div class="navbar">
         <a href="#">Home</a>
